# django_state_choice_field

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: checks_and_tests.yaml
dj_enum/: __init__.py  exceptions.py  fields.py  utils.py
dj_enum/tests/: models.py  test_module.py  test_settings.py
django_state_choice_field/: __init__.py  exceptions.py  fields.py
django_state_choice_field/tests/: models.py  test_module.py  test_settings.py
